Regression: Applying Vertex Weight Mix modifier bakes all shape keys with values > 0 into a selected shape key or Basis #97758

Closed
opened 2022-05-01 21:57:57 +02:00 by Anon · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
Worked: 2.93

Caused by 65c5ebf577

Short description of error
Applying Vertex Weight Mix modifier bakes all shape keys with values > 0 into a selected shape key or Basis.

Exact steps for others to reproduce the error

From the default startup file:

  • add two vertex groups to the default cube
  • add three shapekeys to the default cube
  • in editmode for the first shapekey, type {key G X 1 Enter}, then back to objectmode
  • in editmode for the first shapekey, type {key G Y 1 Enter}, then back to objectmode
  • in editmode for the first shapekey, type {key G Z 1 Enter}, then back to objectmode
  • set all of these shapekey values to 1
  • add a VertexWeightMix modifier and specify the two vertexgroups (the modifier has no effect on the geometry, this is expected)
  • now apply the modifer (the geometry moves, this is unexpected)

repro.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` Worked: 2.93 Caused by 65c5ebf577 **Short description of error** Applying Vertex Weight Mix modifier bakes all shape keys with values > 0 into a selected shape key or Basis. **Exact steps for others to reproduce the error** From the default startup file: - add two vertex groups to the default cube - add three shapekeys to the default cube - in editmode for the first shapekey, type {key G X 1 Enter}, then back to objectmode - in editmode for the first shapekey, type {key G Y 1 Enter}, then back to objectmode - in editmode for the first shapekey, type {key G Z 1 Enter}, then back to objectmode - set all of these shapekey values to 1 - add a `VertexWeightMix` modifier and specify the two vertexgroups (the modifier has no effect on the geometry, this is expected) - now apply the modifer (the geometry moves, this is unexpected) [repro.blend](https://archive.blender.org/developer/F13045752/repro.blend)
Author

Added subscriber: @vf986425

Added subscriber: @vf986425
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce from scratch, will check

I can reproduce from scratch, will check
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Caused by 65c5ebf577

From the default startup file:

  • add two vertex groups to the default cube
  • add three shapekeys to the default cube
  • in editmode for the first shapekey, type {key G X 1 Enter}, then back to objectmode
  • in editmode for the first shapekey, type {key G Y 1 Enter}, then back to objectmode
  • in editmode for the first shapekey, type {key G Z 1 Enter}, then back to objectmode
  • set all of these shapekey values to 1
  • add a VertexWeightMix modifier and specify the two vertexgroups (the modifier has no effect on the geometry, this is expected)
  • now apply the modifer (the geometry moves, this is unexpected)

CC @ideasman42 , looks like a regression to me.

Caused by 65c5ebf577 From the default startup file: - add two vertex groups to the default cube - add three shapekeys to the default cube - in editmode for the first shapekey, type {key G X 1 Enter}, then back to objectmode - in editmode for the first shapekey, type {key G Y 1 Enter}, then back to objectmode - in editmode for the first shapekey, type {key G Z 1 Enter}, then back to objectmode - set all of these shapekey values to 1 - add a `VertexWeightMix` modifier and specify the two vertexgroups (the modifier has no effect on the geometry, this is expected) - now apply the modifer (the geometry moves, this is unexpected) CC @ideasman42 , looks like a regression to me.
Philipp Oeser changed title from Applying Vertex Weight Mix modifier bakes all shape keys with values > 0 into a selected shape key or Basis to Regression: Applying Vertex Weight Mix modifier bakes all shape keys with values > 0 into a selected shape key or Basis 2022-05-02 13:38:41 +02:00
Campbell Barton self-assigned this 2022-05-06 03:41:24 +02:00

This issue was referenced by 929a210608

This issue was referenced by 929a21060851e75b18a54a8c388b472d77ce4abb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97758
No description provided.