Fix T97758: Applying modifiers bakes shape-keys

Regression in [0] which is useful when applying modifiers as a shape-key
but not when applying modifiers which keeps the existing shape-keys.

[0]: 65c5ebf5779d07fb92fabd0ff992337f6c980cde